Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-42745

The QtWebView does not work out-of-the-box with the QtWebEngine backend

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.4.0 RC
    • 5.4.0 Beta, 5.4.0
    • WebView
    • None

      When using QtWebEngine it required that the user calls QtWebEngine::initilize() right after the QCoreApplication instance is created; to enable context sharing (OpenGL).

      We don't have a nice way to handle this in QtWebView yet, except documenting it.

        For Gerrit Dashboard: QTBUG-42745
        # Subject Branch Project Status CR V

            stromme Christian
            stromme Christian
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes