Fix webview example for use with QtWebEngine.

When the QtWebEngine is used as a back-end we need to call
QtWebEngine::initialize() or the example will fail as OpenGL context
sharing needs to be enabled.

Task-number: QTBUG-42745
Change-Id: I27ffc4043f759470f4d40441e62de2ba10728a01
Reviewed-by: Caroline Chao <caroline.chao@theqtcompany.com>